--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,17 @@
 *.exe
 *.out
 *.app
+
+# Build files
+target
+
+# MacOS
+.DS_Store
+
+# IntelliJ
+.idea
+
+# Eclipse
+.project
+.settings
+.cproject
